[package]
name = "dct-system-sc-mock"
version = "0.0.0"
authors = ["Dorin Marian Iancu <dorin.iancu@dharitri.com>"]
edition = "2018"
publish = false

[lib]
path = "src/dct_system_sc_mock.rs"
[dependencies.dharitri-sc]
version = "0.12.3"
[dev-dependencies.dharitri-sc-scenario]
version = "0.12.3"
