[package]
name = "nft-minter-deployer-wasm"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["."]

[dev-dependencies]
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
[dependencies.nft-minter-deployer]
default-features = false
path = ".."

[dependencies.dharitri-sc-wasm-adapter]
version = "=0.12.3"
