[package]
name = "royalties-handler-wasm"
version = "0.0.0"
authors = ["Dorin Marian Iancu, dorin.iancu@dharitri.com"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["."]

[dev-dependencies]
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
[dependencies.royalties-handler]
path = ".."

[dependencies.dharitri-sc-wasm-adapter]
version = "0.12.3"
